--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'fuente_titulos';
-    src: url('/assets/FONTS/ethnocentric.otf') format('opentype');
+    src: url('/assets/FONTS/coolvetica.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
@@ -19,6 +19,10 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'fuente_titulos', sans-serif;
 }
 
+h1 {
+    font-size: 3.75rem;
+}
+
 /* Fuente para el texto general */
 body, p {
     font-family: 'fuente_textos', sans-serif;
@@ -26,30 +30,37 @@ body, p {
 
 .navbar, .navbar-nav .nav-link {
     font-family: 'fuente_textos', sans-serif;
+    color: white;
+}
+
+.navbar-brand {
+    font-family: 'fuente_titulos';
+    font-weight: 400;
+    font-size: x-large;
 }
 
 .navbar-brand img {
-    margin-right: 15%;
+    margin-right: 100;
+}
+
+.navbar {
+    background-color: #16171c !important;
 }
 
 .logo {
-    width: 50px; /* Ajusta el tamaño a tu preferencia */
+    width: 3.125rem; /* Ajusta el tamaño a tu preferencia */
     height: auto; /* Mantiene la proporción de la imagen */
-    margin-left: 50%;
+    margin-left: 40%;
 }
 
 .custom-margin {
     margin-right: 5%;
 }
 
-body {
-    font-family: Arial, sans-serif;
-}
-
 .header {
     position: relative;
-    height: 100vh; /* Ajusta la altura a tu preferencia */
-    background: url('/assets/img/headback2.jpg') no-repeat center center/cover;
+    height: 90vh; /* Ajusta la altura a tu preferencia */
+    background: url('/assets/img/headback3.png') no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -72,12 +83,76 @@ body {
     z-index: 2;
 }
 
+.btn-primary {
+    background-color: #1518befa; /* Cambia el color de fondo del botón */
+    border-color: #000000; /* Cambia el color del borde del botón */
+    color: white;
+}
+
+.btn-primary:hover {
+    background-color: #ffffff; /* Cambia el color de fondo del botón cuando se hace hover */
+    border-color: #000000; /* Cambia el color del borde del botón cuando se hace hover */
+    color: #0004ff;
+}
+
+.custom-btn {
+    padding: 5px 60px; /* Aumenta el relleno interno del botón */
+    font-size: 1.5rem; /* Aumenta el tamaño del texto del botón */
+    width: auto; /* Ajusta el ancho del botón */
+    height: auto; /* Ajusta la altura del botón */
+}
+
+.social-icons a {
+    color: #ffffff; /* Color de los íconos */
+    transition: color 0.3s ease-in-out;
+}
+
+.social-icons a:hover {
+    color: #002fff; /* Color de los íconos al hacer hover */
+}
+
+#about {
+    margin-top: 50px; /* Espacio encima de la sección Sobre mí */
+    font-size: 1.125rem;
+}
+
+body {
+    padding-top: 77px; /* Ajusta el valor según la altura de tu navbar */
+    background-color: #1d1d1d;
+    color: white; /* Cambiar el color del texto para mayor legibilidad */
+    
+}
+
+.card-img {
+    width: 50%; /* Asegura que la imagen ocupe el 100% del ancho del contenedor */
+    height: auto; /* Mantiene la proporción de la imagen */
+    max-height: 200px; /* Ajusta esta altura según sea necesario */
+    object-fit: cover; /* Ajusta la imagen para cubrir el contenedor */
+         
+}
+
+.move-on-hover {
+    transition: transform 0.3s ease-in-out;
+}
+
+.move-on-hover:hover {
+    transform: translateY(-10px); /* Ajusta este valor según el efecto que desees */
+}
+
+.d-flex {
+    display: flex;
+}
+
+.flex-fill {
+    flex: 1;
+}
+
 section {
-    padding: 60px 0;
+    padding: 50px 0;
 }
 
 footer {
-    background-color: #343a40;
+    background-color: #16171c !important;
 }
 
 #contactForm {
