--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: 'fuente_titulos';
-    src: url('/assets/FONTS/coolvetica.otf') format('opentype');
+    src: url('assets/FONTS/coolvetica.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'fuente_textos';
-    src: url('/assets/FONTS/RobotoCondensed-Regular.ttf') format('opentype');
+    src: url('assets/FONTS/RobotoCondensed-Regular.ttf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
@@ -56,7 +56,7 @@ body, p {
 .header {
     position: relative;
     height: 90vh; 
-    background: url('/assets/img/headback3.png') no-repeat center center/cover;
+    background: url('assets/img/headback3.png') no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
